session 6 changes
